chore: Update Next.js configuration to disable strict mode, ignore build errors, and disable dotenv autocloaking

--- a/app/globals.css
+++ b/app/globals.css
@@ -31,3 +31,8 @@ body {
     text-wrap: balance;
   }
 }
+
+.ant-pro-chat-chat-list-container {
+  overflow-y: auto !important;
+  height: 100% !important;
+}
